--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   },
   "name": "django-ember-precompile",
   "description": "ember.js precompiler for projects that use the django compressor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/toranb/django-ember-precompile"
   },
   "keywords": [
-    "testing",
-    "bdd"
+    "Ember.js",
+    "Handlebars.js",
+    "template",
+    "django",
+    "django compressor"
   ],
   "main": "./lib/main",
   "bin": {
