--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "django-ember-precompile",
   "description": "ember.js precompiler for projects that use the django compressor",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/toranb/django-ember-precompile"
@@ -28,7 +28,7 @@
     "MIT"
   ],
   "dependencies": {
-    "jsdom": ""
+    "ember-template-compiler": ""
   },
   "devDependencies": {},
   "optionalDependencies": {}
