--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "django-ember-precompile",
   "description": "ember.js precompiler for projects that use the django compressor",
-  "version": "1.5.0",
+  "version": "1.6.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/toranb/django-ember-precompile"
@@ -28,7 +28,8 @@
     "MIT"
   ],
   "dependencies": {
-    "ember-template-compiler": "1.5.0"
+    "ember-template-compiler": "1.6.1",
+    "jsdom": "0.11.1"
   },
   "devDependencies": {},
   "optionalDependencies": {}
